--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 </head>
 <body>
 <main>
-<a href="https://discord.gg/8dFwVmFTUp" class="discord-button">
+<a href="https://discord.gg/ThkrRcbZqk" class="discord-button">
 <img src="images/discord-logo-1-1.png" alt="Discord">
 </a>
 <div class="content">
